Source/IntegrationTests/TestFiles/LitTests/LitTest/dafny0/snapshots/Inputs/Snapshots9.v0.dfy
method M() returns (ok: bool)
  ensures ok  // related location here
{
  if * {  // error: postcondition failure on this return path
    ok := false;
  } else {
    ok := true;
  }
}

method P() returns (ok: bool)
  ensures ok  // related location here
{  // error: postcondition failure on this return path
}
